k3s/payment-service/service.yaml
# DNS interne : les autres pods atteignent ce service via `payment-service:3000`.
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: tickrush
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
